# TrajectoryCollection

./: .gitignore  README  init_experiments.sh
argos-scripts/: CMakeLists.txt
argos-scripts/controllers/: CMakeLists.txt
argos-scripts/experiments/: flocking.argos  flocking_batch.argos  foraging.argos  foraging_batch.argos  khepera_obstacleavoidance.argos  khepera_obstacleavoidance_batch.argos  mixed_by_id_batch.argos  mixed_by_location.argos  mixed_by_location_batch.argos
argos-scripts/loop_functions/: CMakeLists.txt
argos-scripts/loop_functions/flocking_loop_functions/: flocking_loop_functions.cpp  flocking_loop_functions.h
argos-scripts/loop_functions/foraging_loop_functions/: CMakeLists.txt  foraging_loop_functions.cpp
argos-scripts/loop_functions/mixed_loop_functions/: CMakeLists.txt  foraging_qt_user_functions.cpp  mixed_loop_functions.cpp  mixed_loop_functions.h
argos-scripts/loop_functions/trajectory_collection_loop_functions/: CMakeLists.txt  trajectory_collection_loop_functions.cpp  trajectory_collection_loop_functions.h  trajectory_collection_qtuser_functions.cpp  trajectory_collection_qtuser_functions.h
bash-scripts/: automate.sh  automate_python.sh  automate_python_FL_avoid.sh  automate_python_FL_mixed.sh  automate_python_avoid.sh  automate_python_mixed.sh
cluster/: F_in_mrs.py  dfl_in_mrs_opt.py  run_experiments.sh
controllers/: CMakeLists.txt
controllers/khepera_flocking/: CMakeLists.txt  khepera_flocking.cpp  khepera_flocking.h
controllers/khepera_foraging/: CMakeLists.txt  khepera_foraging.cpp  khepera_foraging.h
controllers/khepera_obstacleavoidance/: khepera_obstacleavoidance.h  (+1 more)
experiments/: flocking.argos  foraging.argos  khepera_obstacleavoidance.argos
loop_functions/: CMakeLists.txt
tensorflow-scripts/: DFL_in_MRS.py  Data_processing.ipynb  Data_processing.py  FL_in_MRS.py  Federated_Learning_for_SpatioTemporal_Predictions_in_MultiRobot_Systems.ipynb  Federated_Learning_for_SpatioTemporal_Predictions_in_MultiRobot_Systems.py  barrier.py  federated_learning_for_traj_prediction.ipynb  network.py  plot_datasets.ipynb  pyvstig.py  testing.py  tff_train_set_20200130-201512  vstig.py  vsweights.py
(+16 files in other folders)
